<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/iv"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="#FAFAFA"
        android:scaleType="fitXY"
        android:src="@drawable/ic_add_a_photo_black_24dp" />

    <TextView
        android:id="@+id/editable_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="509dp"
        android:ems="10"
        android:text="@string/RecipeNameTextView"
        android:textAlignment="center"
        android:textSize="30sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="237dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="100dp"
        android:background="@android:color/darker_gray"
        android:padding="4dp"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/recyclerView"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="-120dp"
        android:textSize="30sp"
        android:text="@string/IngredientsTextView" />

    <TextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recyclerView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="-100dp"
        android:text="@string/InstructionsTextView"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/instructionsEdit"
        android:layout_width="match_parent"
        android:layout_height="113dp"
        android:layout_below="@+id/instructions"
        android:layout_alignParentStart="true"
        android:gravity="top|start"
        android:text="@string/InstructionsAreHereTextView"
        android:textSize="30sp" />

</RelativeLayout>